--- a/shippable.yml
+++ b/shippable.yml
@@ -26,3 +26,8 @@ script:
 after_script:
   - ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --ui=bdd --reporter=xunit-file
   - ./node_modules/.bin/istanbul report cobertura --dir shippable/codecoverage/
+after_archive:
+      
+      - echo $SHIPPABLE_ARCHIVE_DOWNLOAD_URL
+      - echo $SHIPPABLE_ARTIFACTS_URL
+      - echo $ARTIFACTS_UPLOAD_SUCCESSFUL
