--- a/shippable.yml
+++ b/shippable.yml
@@ -6,7 +6,6 @@ language: node_js
 node_js:
   - 0.10
   
-  
 #neo4j runs on default port 7474
 services:
  - neo4j
@@ -36,8 +35,7 @@ script:
 after_script:
   - ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --ui=bdd --reporter=xunit-file
   - ./node_modules/.bin/istanbul report cobertura --dir shippable/codecoverage/
-after_archive:
+
+archive: true
       
-      - echo $SHIPPABLE_ARCHIVE_DOWNLOAD_URL
-      - echo $SHIPPABLE_ARTIFACTS_URL
-      - echo $ARTIFACTS_UPLOAD_SUCCESSFUL
+      
